# telegram-contacts-export

./: .gitignore  CLAUDE.md  README.md  conftest.py  export.py  main.py  nicknames.txt  pyproject.toml
src/: config.py  file_manager.py  menu_manager.py  session_manager.py  telegram_client_wrapper.py  telegram_exporter.py
tests/: __init__.py  test_core.py
